# Datalib

./: .readthedocs.yaml  Makefile  README.md  make.bat  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: requirements.txt
source/: conf.py  index.rst
src/: advanced_analysis.py  data_processing.py  statistics.py  visualisation.py
tests/: test_advanced_analysis.py  test_data_processing.py  test_statistics.py  test_visualization.py
