[metadata]
name = data-visualization
version = 0.1.0
description = A project for statistical calculations and visualizations using Python.
long_description = file: README.md
long_description_content_type = text/markdown
author = Votre Nom
author_email = votre.email@example.com
url = https://datalib.com/data-visualization
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
dev =
    pytest >= 6.2
    black >= 22.1
    flake8 >= 4.0

[options.entry_points]
console_scripts =
    data-visualization = data_visualization.main:main

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True
